--- a/src/sass/common/colors/variables-dark.scss
+++ b/src/sass/common/colors/variables-dark.scss
@@ -79,6 +79,7 @@ $background-color-pre: $color-neutral-d3;
 
 // toggle
 $color-toggle: l1;
+$color-toggle-selected: d3;
 
 // radio buttons
 $background-radio-button: linear-gradient(0deg, $color-neutral-d3 0%, $color-neutral-d5 100%);
