--- a/src/sass/common/colors/variables-light.scss
+++ b/src/sass/common/colors/variables-light.scss
@@ -79,6 +79,7 @@ $background-color-pre: $color-neutral-l3;
 
 // toggle
 $color-toggle: d1;
+$color-toggle-selected: l3;
 
 // radio buttons
 $background-radio-button: linear-gradient(0deg, $color-neutral-l5 0%, $color-neutral-l3 100%);
